Atualizar o appsettings.json

--- a/iTaaS.ConvertLogService/appsettings.json
+++ b/iTaaS.ConvertLogService/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-J2T6UJR\\MSSQLSERVERDEV22;Initial Catalog=itaas;Persist Security Info=True;User ID=sa;Password=Vitor2023!"
+    "DefaultConnection": "Data Source=SERVER;Initial Catalog=itaas;Persist Security Info=True;User ID=sa;Password=SenhaDoBanco"
   }
 }
