--- a/iTaaS.ConvertLogService/appsettings.Development.json
+++ b/iTaaS.ConvertLogService/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-J2T6UJR\\MSSQLSERVERDEV22;Initial Catalog=itaas;Persist Security Info=True;User ID=sa;Password=Vitor2023!"
+    "DefaultConnection": "Data Source=SERVER;Initial Catalog=itaas;Persist Security Info=True;User ID=sa;Password=SenhaDoBanco"
   }
 }
